# Desktop-Logo

./: .gitignore  Cargo.toml  README.md  cargo-tree.txt  cosmic-logo.toml  desktop-logo.toml
.github/: copilot-instructions.md
.github/workflows/: flatpak.yml
crates/applet/: Cargo.toml
crates/applet/src/: config_watcher.rs  lib.rs  main.rs  overlay_window.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
data/: com.example.CosmicLogoApplet.desktop
flatpak/: com.example.CosmicLogoApplet.json  com.example.DesktopLogoApplet.json
scripts/: build-flatpak.sh
