[patch.crates-io]
cosmic = { git = "https://github.com/pop-os/libcosmic", branch = "master" }
[workspace]
members = [
    "crates/applet"
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT"
repository = ""


[workspace.dependencies]

anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
indexmap = "2.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.metadata.cargo-logo-applet]
description = "Desktop logo overlay applet (prototype)."