[package]
name = "desktop_logo_applet"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
image = { workspace = true }
wayland-sys = { version = "0.31", package = "wayland-sys" }
pixels = "0.13"
notify = "6"
winit = "0.27"

[features]
default = []